jenkins-gcp-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    name: jenkins-http
  - port: 50000
    targetPort: 50000
    name: jenkins-jnlp
  selector:
    app: jenkins-master
